# Robot-Navigation-SLAM

./: README.md
assets/html/: bootloader.html  jetson.html  mbot_firmware.html  mbot_install.html  sys_util.html
mbot_apriltag/: README.md
mbot_apriltag/scripts/: apriltag_lcm_publisher.py  apriltag_lcm_subscriber.py  apriltag_streamer.py  cam_calibration_data.npz  camera_calibration.py  save_image.py  test_camera.py  video_streamer.py
mbot_apriltag/scripts/templates/: image_save_page.html
mbot_autonomy/: CMakeLists.txt  README.md  lcmlog-2024-05-02.00  template_generate.py
mbot_autonomy/include/mbot/: mbot_channels.h
mbot_autonomy/include/planning/: astar.hpp  exploration.hpp  frontiers.hpp  motion_planner.hpp  motion_planner_server.hpp  obstacle_distance_grid.hpp
mbot_autonomy/include/slam/: action_model.hpp  mapping.hpp  moving_laser_scan.hpp  occupancy_grid.hpp  particle_filter.hpp  sensor_model.hpp  slam.hpp  slam_channels.h
mbot_autonomy/include/utils/: grid_utils.hpp  lcm_config.h
mbot_autonomy/include/utils/geometric/: interpolation.hpp  pose_trace.hpp
mbot_autonomy/scripts/: install.sh
mbot_autonomy/services/: install_mbot_autonomy_services.sh  mbot-motion-controller.service  mbot-slam.service
mbot_autonomy/src/mbot/: .drive_square.cpp.swp  README  diff_maneuver_controller.h  diff_motion_controller.cpp  drive_square.cpp  omni_maneuver_controller.h  omni_motion_controller.cpp
mbot_autonomy/src/planning/: astar.cpp  astar_test.cpp  exploration.cpp  exploration_main.cpp  frontiers.cpp  motion_planner.cpp  motion_planner_server.cpp  motion_planner_server_main.cpp  obstacle_distance_grid.cpp
mbot_autonomy/src/planning/a-star-demo/: astar.py  astar_demo.py  colors.py  map_maker.py  simple.map
mbot_autonomy/src/slam/: action_model.cpp  mapping.cpp  moving_laser_scan.cpp  occupancy_grid.cpp  particle_filter.cpp  sensor_model.cpp  slam.cpp  slam_main.cpp
mbot_autonomy/src/utils/: getopt.c  timestamp.c  zarray.c  zhash.c
mbot_autonomy/src/utils/geometric/: pose_trace.cpp
mbot_firmware/: CMakeLists.txt  README.md  debug.sh  debug_attach.sh  setup.sh  upload.sh  upload_swd.sh
mbot_firmware/comms/: CMakeLists.txt  README.txt
mbot_firmware/comms/include/comms/: common.h  listener.h  mbot_channels.h  protocol.h  topic_data.h
mbot_firmware/comms/src/: common.c  listener.c  protocol.c  topic_data.c
mbot_firmware/mbot/: CMakeLists.txt
mbot_firmware/mbot/include/mbot/barometer/: barometer.h
mbot_firmware/mbot/include/mbot/defs/: mbot_diff_defs.h  mbot_fram_map.h  mbot_omni_defs.h  mbot_params.h  mbot_pins.h
mbot_firmware/mbot/include/mbot/encoder/: encoder.h  quadrature_encoder.pio
mbot_firmware/mbot/include/mbot/fram/: fram.h
mbot_firmware/mbot/include/mbot/imu/: bhy_support.h  bhy_uc_driver.h  imu.h
mbot_firmware/mbot/include/mbot/imu/firmware/: BHI160B_fw.h  bosch_pcb_7183_di03_bmi160_bmm150-7183_di03-2-1-11824.fw  fw_gen.py
mbot_firmware/mbot/include/mbot/motor/: motor.h
mbot_firmware/mbot/include/mbot/servo/: servo.h
mbot_firmware/mbot/include/mbot/utils/: utils.h
mbot_firmware/mbot/src/barometer/: barometer.c
mbot_firmware/mbot/src/defs/: mbot_defs.c
mbot_firmware/mbot/src/encoder/: encoder.c
mbot_firmware/mbot/src/fram/: fram.c
mbot_firmware/mbot/src/imu/: bhy.c  bhy_support.c  bhy_uc_driver.c  imu.c
mbot_firmware/mbot/src/motor/: motor.c
mbot_firmware/mbot/src/servo/: servo.c
mbot_firmware/mbot/src/utils/: utils.c
mbot_firmware/python/: mbot_move_simple.py  mbot_test_drive.py  mbot_test_drive_omni.py  test_drive.py
mbot_firmware/rc/: CMakeLists.txt
mbot_firmware/rc/include/rc/mpu/: dmp_firmware.h  mpu.h  mpu_defs.h
mbot_firmware/rc/src/mpu/: mpu.c
mbot_firmware/src/: CMakeLists.txt  controller.c  controller.h  mbot.c  mbot.h  odometry.c  odometry.h  print_tables.c  print_tables.h
mbot_firmware/tests/: CMakeLists.txt  mbot_barometer_test.c  mbot_bhy_test.c  mbot_calibrate_accel.c  mbot_calibrate_classic.c  mbot_calibrate_classic_auto.c  mbot_calibrate_gyro.c  mbot_calibrate_omni.c  mbot_closed_loop_ctrler_test.c  mbot_current_control_test.c  mbot_dmp_test.c  mbot_encoder_test.c  mbot_fake_calibration.c  mbot_fram_test.c  mbot_imu_test.c  mbot_motor_analyze.c  mbot_motor_test.c  mbot_read_motor_adc_test.c  mbot_servo_test.c  mbot_usb_serial_test.c  pico_interrupt_test.c  rc_matrix_test.c
mbot_lcm_base/: CMakeLists.txt  README.md
mbot_lcm_base/mbot_lcm_serial/: CMakeLists.txt  README.md
mbot_lcm_base/mbot_lcm_serial/include/mbot_lcm_serial/: comms_common.h  lcm_config.h  listener.h
mbot_lcm_base/mbot_lcm_serial/services/: mbot-lcm-serial.service
mbot_lcm_base/mbot_lcm_serial/src/: comms_common.c  lcm_serial_server_main.c  listener.c  protocol.c  topic_data.c
mbot_lcm_base/mbot_msgs/: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  lcm_serial_gen.py
mbot_lcm_base/mbot_msgs/lcmtypes/: exploration_status_t.lcm  joy_t.lcm  lidar_t.lcm  mbot_apriltag_array_t.lcm  mbot_apriltag_t.lcm  mbot_encoders_t.lcm  mbot_imu_t.lcm  mbot_motor_pwm_t.lcm  mbot_motor_vel_t.lcm  mbot_msg_received_t.lcm  mbot_slam_reset_t.lcm  particle_t.lcm  path2D_t.lcm  planner_request_t.lcm  point3D_t.lcm  pose2D_t.lcm  pose3D_t.lcm  slam_status_t.lcm  twist2D_t.lcm  twist3D_t.lcm
mbot_lcm_base/scripts/: install.sh
mbot_lcm_base/timesync/: CMakeLists.txt
mbot_lcm_base/timesync/include/timesync/: lcm_config.h  timestamp.h
mbot_lcm_base/timesync/src/: timestamp.c  timesync.cpp
